Fix cart icon shifting when items are added

--- a/src/components/Navbar/Navbar.module.css
+++ b/src/components/Navbar/Navbar.module.css
@@ -1,6 +1,6 @@
 nav {
   background-color: #ffff;
-  padding: 8px 14px;
+  padding: 14px 28px;
   display: flex;
   justify-content: space-between;
   align-items: center;
@@ -14,7 +14,7 @@ ul {
 
 a {
   text-decoration: none;
-  color: black;
+  color: #343a40;
 }
 
 nav svg {
@@ -33,6 +33,6 @@ nav svg {
   border-radius: 50px;
   background-color: slateblue;
   display: inline-block;
-  transform: translate(-8px, -20px);
-  
+  transform: translate(-10px, -8px);
+  position:absolute;
 }
